# podcrawler-mcp

./: LICENSE  README.md  pyproject.toml
examples/: basic_discovery.py
podcrawler/: __init__.py  server.py
podcrawler/crawler/: __init__.py  parser.py  spider.py
podcrawler/tools/: __init__.py  discovery.py
podcrawler/utils/: __init__.py  filtering.py  formatting.py
tests/: __init__.py  test_server.py
