[tool.poetry]
name = "podcrawler-mcp"
version = "0.1.0"
description = "MCP server for podcast discovery through web crawling"
authors = ["PodCrawlerMCP Contributors <podcrawlermcp@example.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/infinitimeless/podcrawler-mcp"
documentation = "https://github.com/infinitimeless/podcrawler-mcp/docs"
keywords = ["podcast", "mcp", "discovery", "crawler"]

[tool.poetry.dependencies]
python = "^3.9"
mcp = "^1.2.0"
scrapy = "^2.8.0"
requests = "^2.28.0"
pyPodcastParser = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.2.0"
sphinx = "^6.1.0"
pre-commit = "^3.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
podcrawler = "podcrawler.server:main"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true